--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {background-color:#041c42;}
-p {font-size:14px}
-p.Helv{font-family:Helvetica,serif}
+p {font-size:14px;}
+p.Helv{font-family:Helvetica,serif;}
 
-.insertForm {style="background-color:#ffcc00"}
+.insertForm {background-color:#ffcc00;}
