converted to conform to bootstrap

--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,5 @@ body {background-color:#041c42;}
 p {font-size:14px;}
 p.Helv{font-family:Helvetica,serif;}
 
-.insertForm {background-color:#ffcc00;}
+/*.insertForm {background-color:#ffcc00;}*/
 
