added background to all pages and image is in img/

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,1 @@
-body {background-color:#041c42;}
-p {font-size:14px;}
-p.Helv{font-family:Helvetica,serif;}
-
-/*.insertForm {background-color:#ffcc00;}*/
-
+body { background-image:url('../img/domerainbow.jpg');}
