--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+.required:before { content:"*"; color:red }
 body { background-image:url('../img/South_Quad_Notre_Dame_edit.jpg');
 background-size:cover;
 background-repeat:no-repeat;}
