--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
 .required:before { content:"*"; color:red }
-body { background-image:url('../img/South_Quad_Notre_Dame_edit.jpg');
+body { background-image:url('../img/South_Quad_Notre_Dame_edit.png');
 background-size:cover;
 background-repeat:no-repeat;}
